--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-target
+/target
+/Cargo.lock
+/config.stamp
+/Makefile
+/config.mk
+/src/doc/build
+/src/etc/*.pyc
+/src/registry/target
+rustc
+__pycache__
+.idea/
+.vscode/
+*.iml
+*.swp
